# dimweave

./: .gitignore  .mcp.json  CLAUDE.md  README.md  UPDATE.md  index.html  package.json  playwright.config.ts  skills-lock.json  test-e2e.ts  test-routing.ts  tsconfig.app.json  tsconfig.daemon.json  tsconfig.json  vite.config.test.ts  vite.config.ts
bridge/: Cargo.toml
bridge/src/: channel.rs  channel_state.rs  daemon_client.rs  daemon_client_io.rs  main.rs  mcp.rs  mcp_io.rs  mcp_protocol.rs  mcp_protocol_tests.rs  message_target.rs  message_target_tests.rs  tools.rs  tools_tests.rs  types.rs
daemon/: bridge.ts  (+13 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_cli.rs  claude_launch.rs  commands.rs  commands_artifact.rs  commands_feishu_project.rs  commands_history.rs  commands_provider_auth.rs  commands_task.rs  commands_telegram.rs  main.rs  main_tests.rs  mcp.rs  mcp_tests.rs  paste_attachments.rs  pty.rs
src-tauri/src/claude/: auth.rs  mod.rs  models.rs  models_tests.rs  profile.rs  profile_tests.rs  usage.rs  usage_tests.rs
src-tauri/src/claude_session/: mod.rs  process.rs  process_tests.rs  prompt.rs  prompt_tests.rs  text_utils.rs
src-tauri/src/codex/: mod.rs  oauth.rs  usage.rs
src-tauri/src/commands/: oauth.rs
src-tauri/src/daemon/: cmd.rs  feishu_project_lifecycle.rs  feishu_project_lifecycle_tests.rs  feishu_project_task_link.rs  feishu_project_task_link_tests.rs  gui.rs  gui_task.rs  gui_tests.rs  image_compress.rs  launch_task_sync.rs  message_target.rs  message_target_tests.rs  mod.rs  permission.rs  ports.rs  resume_task_binding_tests.rs  routing.rs  routing_behavior_tests.rs  routing_dispatch.rs  routing_display.rs  routing_format.rs  routing_shared_role_tests.rs  routing_target_session.rs  routing_tests.rs  routing_user_input.rs  routing_user_input_tests.rs  routing_user_target_tests.rs  session_manager.rs  state.rs  state_delivery.rs  state_permission.rs  state_persistence.rs  state_persistence_tests.rs  state_runtime.rs  state_snapshot.rs  state_snapshot_tests.rs  state_task_flow.rs  state_task_snapshot_tests.rs  state_tests.rs  task_runtime.rs  (+8 more)
src-tauri/src/daemon/claude_sdk/: event_handler.rs  event_handler_delivery.rs  event_handler_stream.rs  event_handler_tests.rs  mod.rs  process.rs  process_tests.rs  protocol.rs  protocol_tests.rs  protocol_tests_format.rs  protocol_tests_parse.rs  protocol_tests_stream.rs  reconnect.rs  runtime.rs  stdio.rs
src-tauri/src/daemon/codex/: handler.rs  handshake.rs  handshake_tests.rs  lifecycle.rs  mod.rs  port_pool.rs  port_pool_tests.rs  runtime.rs  session.rs  session_event.rs  start_tests.rs  structured_output.rs  structured_output_tests.rs  ws_client.rs  ws_helpers.rs
src-tauri/src/daemon/control/: claude_sdk_handler.rs  claude_sdk_handler_nonce.rs  claude_sdk_handler_processing.rs  claude_sdk_handler_reconnect.rs  claude_sdk_handler_tests.rs  feishu_project_webhook.rs  feishu_project_webhook_tests.rs  handler.rs  mod.rs  server.rs
src-tauri/src/feishu_project/: api.rs  api_tests.rs  config.rs  issue_operator.rs  issue_query.rs  issue_query_parse.rs  issue_query_team.rs  mcp_client.rs  mcp_http.rs  mcp_sync.rs  mcp_sync_tests.rs  mod.rs  polling_tests.rs  runtime.rs  store.rs  task_link_tests.rs  tool_catalog.rs  types.rs  types_tests.rs
src-tauri/src/telegram/: api.rs  config.rs  mod.rs  pairing.rs  report.rs  runtime.rs  runtime_handlers.rs  types.rs
(+438 files in other folders)
