[package]
name = "agent-bridge-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-bridge-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
