[package]
name = "agent-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri-plugin-dialog = "2.6.0"
portable-pty = "0.9.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
